--- a/assets/scss/components/_typography.scss
+++ b/assets/scss/components/_typography.scss
@@ -18,22 +18,22 @@ p, .paragraph {
 h1,h2,h3,h4,h5,h6 {
   color: $text-color-dark;
   font-family: $primary-font;
-  font-weight: 700;
+  font-weight: 600;
   line-height: 1.2;
 }
 
 h1, .h1{
   font-size: 42px;
-  font-weight: 900;
+  font-weight: 700;
   @include mobile {
     font-size: 36px;
-    font-weight: 700;
+    font-weight: 600;
   }
 }
 
 h2, .h2{
   font-size: 36px;
-  font-weight: 700;
+  font-weight: 600;
   @include mobile {
     font-size: 32px;
   }
@@ -61,9 +61,9 @@ h6, .h6{
 
 .display-3{
   font-size: 50px;
-  font-weight: 900;
+  font-weight: 700;
   @include mobile {
     font-size: 36px;
-    font-weight: 700;
+    font-weight: 600;
   }
 }
