--- a/assets/scss/settings/_colors.scss
+++ b/assets/scss/settings/_colors.scss
@@ -1,10 +1,10 @@
 // Color Variables
 $primary-color: #FF0043 !default;
-$text-color: #333 !default;
-$text-color-dark: #222 !default;
-$text-color-light: #999 !default;
+$text-color: #495977 !default;
+$text-color-dark: #0a214c !default;
+$text-color-light: #7e859d !default;
 $body-color: #fff;
-$border-color: #e2e2e2 !default;
+$border-color: #e2e8f0 !default;
 $black: #000 !default;
 $white: #fff !default;
 $light: #f5f5f5 !default;
