--- a/assets/scss/settings/_fonts.scss
+++ b/assets/scss/settings/_fonts.scss
@@ -1,3 +1,3 @@
 // Font Variables
-$primary-font: 'Poppins', sans-serif;
+$primary-font: 'Inter', sans-serif;
 //$icon-font: 'themify'; // seems to be unused
