--- a/assets/scss/templates/_main.scss
+++ b/assets/scss/templates/_main.scss
@@ -90,9 +90,9 @@
       font-weight: 500;
     }
 
-    &:not(:last-child) {
-      border-bottom: 1px solid $border-color;
-    }
+    // &:not(:last-child) {
+    //   border-bottom: 1px solid $border-color;
+    // }
   }
 
   .sidelist {
@@ -192,11 +192,10 @@
   }
 
   .btn-next{
-    margin-left: 15px;
     text-align: left;
   }
   .btn-prev{
-    margin-right: 15px;
+    margin-right: 30px;
     text-align: right;
   }
 }
@@ -406,13 +405,33 @@ textarea.form-control {
     overflow-wrap: break-word;
   }
 
+  img{
+    @extend .shadow-lg;
+    margin: 10px 0 20px;
+  }
+
+  h1{
+    font-size: 36px;
+  }
+  h2{
+    font-size: 28px;
+  }
+  h3{
+    font-size: 24px;
+  }
+  h4{
+    font-size: 20px;
+  }
+
   h1,
   h2,
   h3,
   h4,
   h5,
   h6 {
-    font-weight: 500;
+    font-weight: 600;
+    margin-top: 36px;
+    margin-bottom: 20px;
   }
 
   strong {
